--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Projeto Git</h1>
-    
+    <p>Aprendendo a manipular o Git e o Github</p>
+    <ol>
+        <li>Leonardo</li>
+    </ol>
 </body>
 </html>
